<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_surface_soft">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guide_first_content_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/guide_first_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/guide_first_desc"
            android:textColor="@color/color_text_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/guide_first_action_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_first_desc">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/guide_first_pdf_issue_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white_r10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/guide_first_pdf_issue_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/guide_first_pdf_issue_title"
                    android:textColor="@color/color_text_primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/guide_first_pdf_retry_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/shape_guide_option_button"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="12dp"
                    android:text="@string/guide_first_pdf_retry_action"
                    android:textColor="@color/color_text_primary"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/guide_first_feature_issue_row"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_white_r10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/guide_first_feature_issue_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/guide_first_feature_issue_title"
                    android:textColor="@color/color_text_primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/guide_first_feature_explore_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_guide_option_button"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="12dp"
                    android:text="@string/guide_first_feature_explore_action"
                    android:textColor="@color/color_text_primary"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/guide_first_keep_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_primary_r10"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/guide_first_keep_action"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_first_action_list" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/guide_first_continue_uninstall_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_guide_uninstall_button"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/guide_first_continue_uninstall_action"
            android:textColor="@color/color_text_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_first_keep_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
