<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_all"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/selector_stroke_r10"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6.5dp"
                app:srcCompat="@drawable/ic_file_all" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/color_tab_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_pdf"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/selector_stroke_r10"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6.5dp"
                app:srcCompat="@drawable/ic_file_pdf" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdf"
                android:textColor="@color/color_tab_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_word"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/selector_stroke_r10"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6.5dp"
                app:srcCompat="@drawable/ic_file_word" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:textColor="@color/color_tab_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_ppt"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/selector_stroke_r10"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6.5dp"
                app:srcCompat="@drawable/ic_file_ppt" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppt"
                android:textColor="@color/color_tab_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_excel"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/selector_stroke_r10"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6.5dp"
                app:srcCompat="@drawable/ic_file_excel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excel"
                android:textColor="@color/color_tab_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>