<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/action_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:textColor="@color/color_text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/extra_guide_art_panel"
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/shape_extra_guide_panel"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/extra_guide_phone"
            android:layout_width="180dp"
            android:layout_height="184dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_extra_guide_phone_frame"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/extra_guide_phone_icon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_route_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/extra_guide_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/extra_guide_permission_label"
                android:textColor="@color/color_text_primary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/extra_guide_phone_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/extra_guide_float_card"
            android:layout_width="258dp"
            android:layout_height="48dp"
            android:layout_marginTop="133dp"
            android:background="@drawable/shape_white_r10"
            android:elevation="8dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/extra_guide_card_icon"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_route_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/extra_guide_card_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/color_text_primary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/extra_guide_switch"
                app:layout_constraintStart_toEndOf="@+id/extra_guide_card_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/extra_guide_switch"
                android:layout_width="34dp"
                android:layout_height="20dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_extra_switch_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/extra_guide_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:lineSpacingExtra="1dp"
        android:text="@string/extra_guide_title"
        android:textColor="@color/color_text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_guide_art_panel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/extra_guide_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/extra_guide_desc"
        android:textColor="@color/color_text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_guide_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/extra_guide_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_primary_r10"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/grant"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_guide_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
